add changes to industries folders

--- a/templates/home.html
+++ b/templates/home.html
@@ -407,10 +407,10 @@
                     title: 'Aesthetic & Medicine',
                     description: "Placeholder description for Aesthetic & Medicine. We specialize in sourcing cutting-edge equipment and products for clinics and spas, alongside providing consulting for facility retrofitting and service optimization in this rapidly growing market.",
                     images: [
-                        "{{ url_for('static', filename='images/placeholders/aesthetics_bg.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/aesthetics1.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/aesthetics2.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/aesthetics3.jpg') }}"
+                        "{{ url_for('static', filename='images/aesthetics/card-bg.jpg') }}",
+                        "{{ url_for('static', filename='images/aesthetics/image1.jpg') }}",
+                        "{{ url_for('static', filename='images/aesthetics/image2.jpg') }}",
+                        "{{ url_for('static', filename='images/aesthetics/image3.jpg') }}"
                     ]
                 },
                 'training': {
@@ -428,10 +428,10 @@
                     title: 'Fintech',
                     description: "Placeholder description for Fintech. We identify and partner with innovative fintech solution providers to facilitate their entry and growth within the dynamic African financial landscape.",
                     images: [
-                        "{{ url_for('static', filename='images/placeholders/fintech_bg.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/fintech1.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/fintech2.jpg') }}",
-                        "{{ url_for('static', filename='images/placeholders/fintech3.jpg') }}"
+                        "{{ url_for('static', filename='images/fintech/card-bg.jpg') }}",
+                        "{{ url_for('static', filename='images/fintech/image1.jpg') }}",
+                        "{{ url_for('static', filename='images/fintech/image2.jpg') }}",
+                        "{{ url_for('static', filename='images/fintech/image3.jpg') }}"
                     ]
                 }
             },
